# radiata

./: .gitignore  .prettierrc  LICENSE.txt  README.md  jsconfig.json  next.config.js  package-lock.json  package.json  pyproject.toml
components/: chart.js  components.module.sass  header.js  layout.js  table.js  utils.js
pages/: _app.js  index.js
scripts/: install.sh  radiata-client  server.sh
src/radiata/: app.py
styles/: constants.sass  index.sass  utils.sass
