[project]
name = "radiata"
version = "0.1.0"
description = "System resource monitoring tool"
authors = [{ name = "urasakikeisuke", email = "keisuke.urasaki@map4.jp" }]
dependencies = [
    "fastapi>=0.103.1",
    "Gunicorn>=21.2.0",
    "uvicorn[standard]>=0.23.2",
    "psutil>=5.9.5",
    "pynvml>=11.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "uvicorn radiata:app --reload --port 4444"
prod = "gunicorn -b 0.0.0.0:4444 -k uvicorn.workers.UvicornWorker -n radiata radiata:app"

[tool.hatch.metadata]
allow-direct-references = true
